--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "noEmit": true, // Necessário quando allowImportingTsExtensions é true
     // File Layout
     // "rootDir": "./src",
     "outDir": "./dist",
